<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Skyline</string>
    <string name="search">Search</string>
    <string name="error">An error has occurred</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="emulator">Emulator</string>
    <string name="enabled">Enabled</string>
    <string name="settings">Settings</string>
    <string name="share_logs">Share Logs</string>
    <string name="refresh">Refresh</string>
    <string name="log_share_prompt">Share log file</string>
    <string name="logs_not_found">No logs were created during the last run</string>
    <string name="all">All</string>
    <string name="metadata_missing">Metadata Missing</string>
    <string name="icon">Icon</string>
    <string name="no_rom">Cannot find any ROMs</string>
    <string name="pin">Pin</string>
    <string name="play">Play</string>
    <string name="save_management">Save management</string>
    <string name="delete_save">Delete save</string>
    <string name="import_save">Import</string>
    <string name="export_save">Export</string>
    <string name="searching_roms">Searching for ROMs</string>
    <string name="invalid_file">Invalid file</string>
    <string name="missing_title_key">Missing title key</string>
    <string name="incomplete_prod_keys">Incomplete production keys</string>
    <string name="pause">Pause</string>
    <string name="mute">Mute</string>
    <string name="content">Content</string>
    <string name="open_data_directory">View Internal Directory</string>
    <string name="open_data_directory_summary">Opens Skyline\'s internal directory in a file manager</string>
    <string name="search_location">Search Location</string>
    <string name="prod_keys">Production Keys</string>
    <string name="title_keys">Title Keys</string>
    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="use_material_you">Use Material You</string>
    <string name="use_material_you_desc_off">Skyline colors will be used</string>
    <string name="use_material_you_desc_on">Material You will be used</string>
    <string name="app_language">App Language</string>
    <string name="layout_type">Game Display Layout</string>
    <string name="sort_apps_by">Games Sorting Order</string>
    <string name="select_action">Always Show Game Information</string>
    <string name="select_action_desc_on">Game information will be shown on clicking a game</string>
    <string name="select_action_desc_off">Game information will only be shown on long-clicking a game</string>
    <string name="game">Game</string>
    <string name="use_custom_settings">Enable Custom Settings</string>
    <string name="use_custom_settings_desc_on">Custom settings are enabled for this game</string>
    <string name="use_custom_settings_desc_off">Custom settings are disabled for this game</string>
    <string name="reset_custom_settings">Reset Custom Settings</string>
    <string name="reset_custom_settings_desc">Reset custom settings to the default values</string>
    <string name="copy_global_settings">Copy Global Settings</string>
    <string name="copy_global_settings_desc">Copy global settings to this game</string>
    <string name="system">System</string>
    <string name="use_docked">Use Docked Mode</string>
    <string name="handheld_enabled">The system will emulate being in handheld mode</string>
    <string name="docked_enabled">The system will emulate being in docked mode</string>
    <string name="username">Username</string>
    <string name="username_default" translatable="false">@string/app_name</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="system_language">System Language</string>
    <string name="system_region">System Region</string>
    <string name="display">Display</string>
    <string name="max_refresh_rate">Use Maximum Display Refresh Rate</string>
    <string name="max_refresh_rate_enabled">Sets the display refresh rate as high as possible (Will break most games)</string>
    <string name="max_refresh_rate_disabled">Sets the display refresh rate to 60Hz</string>
    <string name="screen_orientation">Screen Orientation</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="respect_display_cutout">Respect Display Cutout</string>
    <string name="respect_display_cutout_enabled">Do not draw UI elements in the cutout area</string>
    <string name="respect_display_cutout_disabled">Allow UI elements to be drawn in the cutout area</string>
    <string name="audio">Audio</string>
    <string name="disable_audio_output">Disable Audio Output</string>
    <string name="disable_audio_output_enabled">Audio output is disabled</string>
    <string name="disable_audio_output_disabled">Audio output is enabled</string>
    <string name="gpu">GPU</string>
    <string name="gpu_driver_config">GPU Driver Configuration</string>
    <string name="force_triple_buffering">Force Triple Buffering</string>
    <string name="triple_buffering_enabled">Utilize at least three swapchain buffers (Higher FPS but more input lag)</string>
    <string name="triple_buffering_disabled">Utilize at least two swapchain buffers (Lower FPS but less input lag)</string>
    <string name="disable_frame_throttling">Disable Frame Throttling</string>
    <string name="disable_frame_throttling_enabled">Game is allowed to submit frames as fast as possible (Only for benchmarking)\n\n<b>Note:</b> An alternative method is utilized to measure the FPS with this enabled, the figures must not be compared to throttled FPS figures</string>
    <string name="disable_frame_throttling_disabled">Only allow the game to submit frames at the display refresh rate</string>
    <string name="executor_slot_count_scale">Executor Slot Count Scale</string>
    <string name="executor_slot_count_scale_desc">Scale controlling the maximum number of simultaneous GPU executions (Higher may sometimes perform better but will use more RAM)</string>
    <string name="executor_flush_threshold">Executor Flush Threshold</string>
    <string name="executor_flush_threshold_desc">Controls how frequently work is flushed to the GPU</string>
    <string name="use_direct_memory_import">Use Direct Memory Import</string>
    <string name="use_direct_memory_import_desc">May alter performance and stability in some games\n<b>NOTE:</b> This option only works on proprietary Adreno drivers</string>
    <string name="force_max_gpu_clocks">Force Maximum GPU Clocks</string>
    <string name="force_max_gpu_clocks_desc">Forces the GPU to run at its maximum possible clock speed (May cause excessive heating and power usage)</string>
    <string name="shader_cache">Disable Shader Cache</string>
    <string name="shader_cache_disabled">Cached shaders won\'t be loaded, will cause stutters</string>
    <string name="shader_cache_enabled">Cached shaders will be loaded, can heavily reduce stuttering</string>
    <string name="hacks">Hacks</string>
    <string name="enable_fast_gpu_readback">Enable Fast GPU Readback</string>
    <string name="enable_fast_gpu_readback_enabled">Fast GPU readback is enabled (Will break some games but others will have higher performance)</string>
    <string name="enable_fast_gpu_readback_disabled">Fast GPU readback is disabled (Ensures highest accuracy)</string>
    <string name="enable_fast_readback_writes">Enable Fast Readback Writes</string>
    <string name="enable_fast_readback_writes_enabled">Fast readback writes are enabled</string>
    <string name="enable_fast_readback_writes_disabled">Fast readback writes are disabled</string>
    <string name="disable_subgroup_shuffle">Disable GPU Subgroup Shuffle</string>
    <string name="disable_subgroup_shuffle_enabled">Shader subgroup shuffle operations are disabled, may cause severe graphical issues</string>
    <string name="disable_subgroup_shuffle_disabled">Shader subgroup shuffle operations are enabled, ensures maximum accuracy</string>
    <string name="debug">Debug</string>
    <string name="validation_layer">Enable Validation Layer</string>
    <string name="validation_layer_enabled">The Vulkan validation layer is enabled, major slowdowns are to be expected</string>
    <string name="validation_layer_disabled">The Vulkan validation layer is disabled</string>
    <string name="credits">Credits</string>
    <string name="licenses">Licenses</string>
    <string name="skyline_license_description">Skyline is licensed under Mozilla Public License 2.0</string>
    <string name="ryujinx_description">Ryujinx has been used for reference throughout the project due to their highly accurate implementations\n\n<b>Note: Skyline is not based on Ryujinx</b></string>
    <string name="shader_compiler_description">Skyline\'s shader compiler is a <b>fork</b> of <i>yuzu</i>\'s shader compiler with Skyline-specific changes while other changes are shared between them allowing both projects to benefit from the development of it\n\n<b>Note:</b> Using it in Skyline is only possible due to the licensing exemption granted to Skyline by the <i>yuzu</i> team</string>
    <string name="sirit_description">Skyline\'s shader compiler internally uses Sirit to emit SPIR-V in an efficient manner</string>
    <string name="vkhpp_description">Vulkan-Hpp provides a C++ API for Vulkan</string>
    <string name="vkma_description">Vulkan Memory Allocator provides a high-quality GPU memory allocator with UMA support</string>
    <string name="khvkval_description">Khronos\'s Vulkan Validation Layer provides error-checking for Vulkan API calls in debug builds</string>
    <string name="oboe_description">Oboe is used for high-performance audio output</string>
    <string name="perfetto_description">Perfetto is used to profile and debug with detailed tracing</string>
    <string name="fmtlib_description">{fmt} provides a modern C++ string formatting API</string>
    <string name="boost_description">Boost provides high-quality implementations of containers and other convenience functions in C++</string>
    <string name="rangev3_description">Range v3 is a reference implementation of ISO C++ 20 ranges, this allows us to use ranges while they are developed in LLVM\'s libc++</string>
    <string name="frozen_description">Frozen provides compile-time immutable hash maps with a perfect hash function for faster lookups</string>
    <string name="pugixml_description">pugixml is used to parse the preference XML to retrieve settings from C++</string>
    <string name="opus_description">Opus Audio Codec provides a high-quality Opus decoder used to decode Opus-encoded audio provided by the guest</string>
    <string name="mbedtls_description">Mbed TLS is used to decrypt AES-encrypted NCAs</string>
    <string name="lz4_description">LZ4 is used to extract LZ4-compressed ELF sections from an NSO</string>
    <string name="tzcode_description">tzcode provides a C API to access tzdb for time zone data</string>
    <string name="jssim_description">Java String Similarity powers our search functionality</string>
    <string name="andx_description">AndroidX provides a consistent user-experience across Android versions</string>
    <string name="amat_description">Android Material Components provides a consistent Material Design UI</string>
    <string name="ktstd_description">Kotlin Standard Library provides convenience functions in Kotlin</string>
    <string name="dagger_description">Dagger provides a framework for compile-time dependency injection</string>
    <string name="mtico_description">Material Design Icons provides consistent iconography throughout the application</string>
    <string name="noto_sans_description">Noto Sans is used as our FOSS shared font replacement for Latin, Japanese and (Traditional) Chinese</string>
    <string name="roboto_description">Roboto is used as our FOSS shared font replacement for Korean and Nintendo\'s extended character set</string>
</resources>