<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="category_content"
        android:title="@string/content">
        <skyline.strato.preference.DocumentsProviderPreference
            app:key="document_provider"
            app:summary="@string/open_data_directory_summary"
            app:title="@string/open_data_directory" />
        <skyline.strato.preference.FolderPickerPreference
            app:key="search_location"
            app:title="@string/search_location" />
        <skyline.strato.preference.KeyPickerPreference
            app:key="prod_keys"
            app:title="@string/prod_keys"
            app:useSimpleSummaryProvider="true" />
        <skyline.strato.preference.KeyPickerPreference
            app:key="title_keys"
            app:title="@string/title_keys"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="category_appearance"
        android:title="@string/appearance">
        <skyline.strato.preference.ThemePreference
            android:defaultValue="2"
            android:entries="@array/app_theme"
            app:key="app_theme"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            app:key="use_material_you"
            app:summaryOff="@string/use_material_you_desc_off"
            app:summaryOn="@string/use_material_you_desc_on"
            app:title="@string/use_material_you" />
        <skyline.strato.preference.LanguagePreference
            app:key="app_language"
            app:persistent="false"
            app:title="@string/app_language" />
        <skyline.strato.preference.IntegerListPreference
            android:defaultValue="1"
            android:entries="@array/layout_type"
            app:key="layout_type"
            app:title="@string/layout_type"
            app:useSimpleSummaryProvider="true" />
        <skyline.strato.preference.IntegerListPreference
            android:defaultValue="0"
            android:entries="@array/sort_apps_by"
            app:key="sort_apps_by"
            app:refreshRequired="true"
            app:title="@string/sort_apps_by"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:summaryOff="@string/select_action_desc_off"
            android:summaryOn="@string/select_action_desc_on"
            app:key="select_action"
            app:title="@string/select_action" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
