<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="category_credits"
        android:title="@string/credits" />
    <PreferenceCategory
        android:key="category_licenses"
        android:title="@string/licenses"
        app:initialExpandedChildrenCount="5">
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright © 2019-2021\nSkyline Team and Contributors"
            app:libraryLicense="@string/mpl2_license"
            app:libraryUrl="https://github.com/skyline-emu/skyline"
            app:summary="@string/skyline_license_description"
            app:title="@string/app_name" />
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright (c) Ryujinx Team and Contributors"
            app:libraryLicense="@string/mit_license"
            app:libraryUrl="https://github.com/Ryujinx/Ryujinx"
            app:summary="@string/ryujinx_description"
            app:title="Ryujinx" />
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright 2021 yuzu Emulator Project\nCopyright © 2021 Skyline Team and Contributors"
            app:libraryLicense="@string/mpl2_license"
            app:libraryUrl="https://github.com/skyline-emu/shader-compiler"
            app:summary="@string/shader_compiler_description"
            app:title="yuzu Shader Compiler" />
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright (c) 2019, sirit\nAll rights reserved."
            app:libraryLicense="@string/bsd_3_clause_license"
            app:libraryUrl="https://github.com/ReinUsesLisp/sirit"
            app:summary="@string/sirit_description"
            app:title="Sirit" />
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright 2015-2020 The Khronos Group Inc."
            app:libraryLicense="@string/apache2_license"
            app:libraryUrl="https://github.com/KhronosGroup/Vulkan-Hpp"
            app:summary="@string/vkhpp_description"
            app:title="Vulkan-Hpp" />
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright (c) 2017-2021 Advanced Micro Devices, Inc. All rights reserved."
            app:libraryLicense="@string/mit_license"
            app:libraryUrl="https://github.com/GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator"
            app:summary="@string/vkma_description"
            app:title="Vulkan Memory Allocator" />
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright (c) 2015-2019 The Khronos Group Inc.\nCopyright (c) 2015-2019 Valve Corporation\nCopyright (c) 2015-2019 LunarG, Inc."
            app:libraryLicense="@string/apache2_license"
            app:libraryUrl="https://github.com/KhronosGroup/Vulkan-ValidationLayers"
            app:summary="@string/khvkval_description"
            app:title="Khronos Vulkan Validation Layer" />
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright 2021 The Android Open Source Project"
            app:libraryLicense="@string/apache2_license"
            app:libraryUrl="https://github.com/google/oboe"
            app:summary="@string/oboe_description"
            app:title="Oboe" />
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright (c) 2017, The Android Open Source Project"
            app:libraryLicense="@string/apache2_license"
            app:libraryUrl="https://github.com/google/perfetto"
            app:summary="@string/perfetto_description"
            app:title="Perfetto" />
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright © 2012 - present, Victor Zverovich"
            app:libraryLicense="@string/libfmt_mit_license"
            app:libraryUrl="https://github.com/fmtlib/fmt"
            app:summary="@string/fmtlib_description"
            app:title="{fmt}" />
        <skyline.strato.preference.LicensePreference
            app:libraryLicense="@string/boost_software_license"
            app:libraryUrl="https://www.boost.org"
            app:summary="@string/boost_description"
            app:title="Boost" />
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright Eric Niebler 2019-present"
            app:libraryLicense="@string/boost_software_license"
            app:libraryUrl="https://github.com/ericniebler/range-v3"
            app:summary="@string/rangev3_description"
            app:title="Range v3" />
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright 2016 QuarksLab"
            app:libraryLicense="@string/apache2_license"
            app:libraryUrl="https://github.com/serge-sans-paille/frozen"
            app:summary="@string/frozen_description"
            app:title="Frozen" />
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright (c) 2006-2019 Arseny Kapoulkine"
            app:libraryLicense="@string/mit_license"
            app:libraryUrl="https://github.com/zeux/pugixml"
            app:summary="@string/pugixml_description"
            app:title="pugixml" />
        <skyline.strato.preference.LicensePreference
            app:libraryLicense="@string/opus_bsd_3_clause_license"
            app:libraryUrl="https://github.com/xiph/opus"
            app:summary="@string/opus_description"
            app:title="Opus Audio Codec" />
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright The Mbed TLS Contributors"
            app:libraryLicense="@string/apache2_license"
            app:libraryUrl="https://github.com/ARMmbed/mbedtls"
            app:summary="@string/mbedtls_description"
            app:title="Mbed TLS" />
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright (c) 2011-2020, Yann Collet\nAll rights reserved."
            app:libraryLicense="@string/bsd_2_clause_license"
            app:libraryUrl="https://github.com/lz4/lz4"
            app:summary="@string/lz4_description"
            app:title="LZ4 Library" />
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright 1985, 1987, 1988 The Regents of the University of California.\nAll rights reserved."
            app:libraryLicense="@string/bsd_3_clause_license"
            app:libraryUrl="https://github.com/skyline-emu/tz"
            app:summary="@string/tzcode_description"
            app:title="tzcode" />
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright 2016 Thibault Debatty"
            app:libraryLicense="@string/apache2_license"
            app:libraryUrl="https://github.com/tdebatty/java-string-similarity"
            app:summary="@string/jssim_description"
            app:title="Java String Similarity" />
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright (C) 2021 The Android Open Source Project"
            app:libraryLicense="@string/apache2_license"
            app:libraryUrl="https://developer.android.com/jetpack/androidx"
            app:summary="@string/andx_description"
            app:title="AndroidX" />
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright (C) 2021 The Android Open Source Project"
            app:libraryLicense="@string/apache2_license"
            app:libraryUrl="https://github.com/material-components/material-components-android"
            app:summary="@string/amat_description"
            app:title="Android Material Components" />
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright 2010-2021 JetBrains s.r.o. and Kotlin Programming Language contributors"
            app:libraryLicense="@string/apache2_license"
            app:libraryUrl="https://kotlinlang.org/api/latest/jvm/stdlib"
            app:summary="@string/ktstd_description"
            app:title="Kotlin Standard Library" />
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright 2012-2021 The Dagger Authors"
            app:libraryLicense="@string/apache2_license"
            app:libraryUrl="https://github.com/google/dagger"
            app:summary="@string/dagger_description"
            app:title="Dagger" />
        <skyline.strato.preference.LicensePreference
            app:libraryLicense="@string/apache2_license"
            app:libraryUrl="https://material.io/resources/icons"
            app:summary="@string/mtico_description"
            app:title="Material Design Icons" />
        <skyline.strato.preference.LicensePreference
            app:libraryCopyright="Copyright 2018 The Noto Project Authors (github.com/googlei18n/noto-fonts)"
            app:libraryLicense="@string/sil_open_font_license"
            app:libraryUrl="https://github.com/googlefonts/noto-cjk"
            app:summary="@string/noto_sans_description"
            app:title="Noto Sans" />
        <skyline.strato.preference.LicensePreference
            app:libraryLicense="@string/apache2_license"
            app:libraryUrl="https://fonts.google.com/specimen/Roboto"
            app:summary="@string/roboto_description"
            app:title="Roboto" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
